--- a/web/css/frontstyle.css
+++ b/web/css/frontstyle.css
@@ -16,7 +16,7 @@ body,h1,a{
 #bg{
 	position: absolute;
 	z-index: 1;
-	background: url('./images/1.jpg')；
+	background: url('images/1.jpg')；
 	background-size: cover;
 	height: 100%;
 	width: 100%;
